RESOLVED FIXED136088
Fix how CodeBlock dumps the opcode op_profile_type
https://bugs.webkit.org/show_bug.cgi?id=136088
Summary Fix how CodeBlock dumps the opcode op_profile_type
Saam Barati
Reported 2014-08-19 17:58:11 PDT
Currently, the implementation doesn't increment the iterator enough times to go through all arguments. This never got done when the other patch that incremented the number of arguments the opcode receives was landed.
Attachments
patch (1.49 KB, patch)
2014-08-20 18:47 PDT, Saam Barati
no flags
patch (1.54 KB, patch)
2014-08-20 18:49 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2014-08-20 18:47:33 PDT
Created attachment 236906 [details] patch Fixes the bug.
Saam Barati
Comment 2 2014-08-20 18:49:15 PDT
Created attachment 236907 [details] patch Fix problem w/ above patch's ChangeLog incorrect spacing for bug description.
WebKit Commit Bot
Comment 3 2014-08-20 19:30:00 PDT
Comment on attachment 236907 [details] patch Clearing flags on attachment: 236907 Committed r172822: <http://trac.webkit.org/changeset/172822>
WebKit Commit Bot
Comment 4 2014-08-20 19:30:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.