Fix how CodeBlock dumps the opcode op_profile_type https://bugs.webkit.org/show_bug.cgi?id=136088

Patch by Saam Barati <sbarati@apple.com> on 2014-08-20
Reviewed by Filip Pizlo.

op_profile_type was modified to receive two extra arguments,
but its dump in CodeBlock::dumpBytecode wasn't changed to
account for this, so it broke CodeBlock::dumpBytecode when
op_profile_type was in the stream of bytecode instructions.
CodeBlock::dumpBytecode now accounts for the change in
op_profile_type's arity.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::dumpBytecode):

Canonical link: https://commits.webkit.org/153960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172822 268f45cc-cd09-0410-ab3c-d52691b4dbfc